# Text_to_audiobook

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.simple  GEMINI.md  LICENSE  PROJECT_OVERVIEW.md  README.md  SETUP_GUIDE.md  SYSTEM_TESTING_GUIDE.md  app.py  asd.txt  benchmark_connection_pooling.py  benchmark_local_performance.py  conftest.py  diagnose.py  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  docker-entrypoint.sh  main.py  performance_analysis_summary.md  performance_test_script.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-simple.txt  requirements.in  requirements.txt  service_manager.sh  test_cache_simple.py  test_cache_standalone.py  test_connection_pooling.py  (+7 more)
.github/workflows/: ci.yml  dev-tools.yml  performance.yml  release.yml  security.yml
airflow/dags/: text_to_audiobook_dag.py
airflow/dags/operators/: __init__.py  kafka_consumer_operator.py  kafka_producer_operator.py  llm_processing_operator.py  quality_validation_operator.py  spark_text_structurer_operator.py
config/: settings.py
docker/: DEPLOYMENT.md  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: airflow-monitoring.json  dashboard.yml  kafka-monitoring.json  llm-monitoring.json  spark-monitoring.json  system-overview.json
docker/grafana/datasources/: prometheus.yml
docker/prometheus/: prometheus.yml
input/: sample.txt  test.txt  test_paragraph.txt
src/: audio_generator.py  chunking.py  contextual_refiner.py  deterministic_segmenter.py  distributed_pipeline_orchestrator.py  emotion_annotator.py  llm_orchestrator.py  output_formatter.py  preprocessor.py  prompt_factory.py  refiner.py  rule_based_attributor.py  simplified_validator.py  speaker_attributor.py  text_extractor.py  text_structurer.py  unfixable_recovery.py  validator.py  voice_caster.py
src/attribution/: cache_keys.py  rule_based_attributor.py  rule_based_cache.py
src/attribution/llm/: cache_manager.py  orchestrator.py  parsing.py  prompt_factory.py
src/cache/: __init__.py  redis_cache.py
src/kafka/: kafka_config.py
src/kafka/consumers/: distributed_text_processor.py  llm_consumer.py  text_extraction_consumer.py
src/kafka/producers/: chunk_producer.py  file_upload_producer.py
src/kafka/schemas/: message_schemas.py
src/llm_pool/: http_pool_manager.py  intelligent_router.py  llm_client.py  llm_pool_manager.py  performance_analytics.py
src/monitoring/: alert_rules.py  grafana_dashboards.py  health_checks.py  prometheus_metrics.py
src/refinement/: contextual_refiner.py  refiner.py
src/spark/: distributed_text_processor.py  distributed_validation.py  resource_optimizer.py  spark_config.py  spark_text_structurer.py
src/text_processing/: preprocessing_cache.py  preprocessor.py  text_extractor.py
src/text_processing/segmentation/: chunking.py  deterministic_segmenter.py
src/validation/: validator.py
tests/: __init__.py  conftest.py  run_integration_tests.py  run_tests.py  test_complete_system.py  test_config.py  test_enhanced_profiling.py  test_enhanced_prompts.py  test_ground_truth.py
tests/integration/: __init__.py  conftest.py  test_airflow_integration.py  test_cost_optimization.py  test_distributed_pipeline.py  test_end_to_end_pipeline.py  test_fallback_chains.py  test_fault_tolerance.py  test_full_pipeline.py  test_intelligent_routing.py  test_multi_model_end_to_end.py  test_production_config.py  test_spark_kafka_integration.py
tests/performance/: benchmark_collector.py  memory_profile_text_extraction.py  memory_profile_text_structuring.py  test_component_performance.py  test_load_simulation.py  test_multi_model_benchmarks.py
tests/unit/: __init__.py  test_distributed_validation.py  test_operators.py  test_redis_cache.py  test_resource_optimizer.py  test_text_extractor.py
tests/utils/: mock_framework.py  mock_llm_framework.py  test_data_manager.py  test_fixtures.py
